<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal">

        <TextView
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/list_item_date"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/tv_prod_wos_name"
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/list_item_wos"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        <TextView
                style="@style/grid_header_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/list_item_model"
                android:textSize="21sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
